--- a/css/styles.css
+++ b/css/styles.css
@@ -11,19 +11,15 @@ body {
     max-width: 800px;
     background: #111D4A;
     color: #FFF;
-    display:flex;
-    flex-direction: column;
+    display: grid;
+    grid-template: 200px 1em auto auto 150px 1em / 1em auto auto 1em;
 }
 
 .card-image {
     object-fit: cover;
-    flex-basis: 200px;
-    min-width: 0; /*this is to overcome a bug of using flex-basis on img element (only happens in chrome)*/
-    min-height: 0; /*this is to overcome a bug of using flex-basis on img element (only happens in chrome)*/
-}
-
-.card-content {
-    padding: 1em;
+    width:100%;
+    height: 100%;
+    grid-column: 1 / -1;
 }
 
 .card-title,
@@ -32,29 +28,36 @@ body {
     font-family: 'Blinker', sans-serif;
 }
 
+.card-title,
+.card-body {
+    grid-column: 2 / -2;
+}
+
 .card-title {
     margin: 0;
     font-weight: 700;
     font-size: 1.75rem;
     color: #05CBE9;
+    grid-row: 3;
 }
 
 .card-body {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 1rem;
     line-height: 1.75;
+    grid-row: 4;
 }
 
-.card-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    margin-top: 3em;
+.card-read-time,
+.card-button {
+    grid-row: -3;
+    align-self: end;
 }
 
 .card-read-time {
     margin: 0;
     opacity: .6;
+    grid-column: 2;
 }
 
 .card-read-time span {
@@ -70,32 +73,44 @@ body {
     padding: .35em 1em;
     text-decoration: none;
     letter-spacing: 1px;
+    grid-column: -3;
+    justify-self: end;
 }
 
 @media (min-width: 600px) {
     .card {
-        flex-direction: row;
+        grid-template: 1.5em auto auto 150px 1.5em / 200px auto auto 1.5em;
+        grid-gap: 0 1.5em;
     }
     
-    .card-img {
-        height: 300px;
+    .card-image {
+        grid-column: 1 / 2;
+        grid-row: 1 / -1;
     }
-    
-    .card-content {
-        display: flex;
-        flex-direction: column;
+
+    .card-title,
+    .card-body,
+    .card-read-time {
+        grid-column: 3 / -2;
     }
 
     .card-title {
         font-size: 2.25rem;
+        grid-row: 2;
     }
 
     .card-body {
         font-size: 1.125rem;
         max-width: 500px;
+        grid-row: 3;
     }
-    
-    .card-footer {
-        margin-top: auto;
+
+    .card-read-time,
+    .card-button {
+        grid-row: -3;
+    }
+
+    .card-button {
+        grid-column: -3;
     }
 }
